# ccpmbuild

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: action.yml  build.yml  release.yml
src/: build.rs  index.rs  main.rs  manifest.rs  minify.rs  package.rs  repair.rs
